--- a/App.Backend/App.API/App.API/App.API.csproj
+++ b/App.Backend/App.API/App.API/App.API.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>7b94f9e4-74a1-485b-ab71-d4cd396044e4</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
