--- a/App.Backend/App.API/App.API/appsettings.Development.json
+++ b/App.Backend/App.API/App.API/appsettings.Development.json
@@ -1,11 +1,18 @@
 {
   "ConnectionStrings": {
-    "default": "Data Source=.;Initial Catalog=App.DB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "default": "Data Source=.;Initial Catalog=App.DB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "omarlocal": "Server=(localdb)\\MSSQLLocalDB;Database=manara;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Key": "",
+    "Issuer": "Manara Issuer",
+    "Audience": "Manara Audience",
+    "ExpiryMinutes": 30
   }
 }
