--- a/App.Backend/App.Services/App.Services.csproj
+++ b/App.Backend/App.Services/App.Services.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\App.Core\App.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
