--- a/App.Backend/App.API/App.API/appsettings.Development.json
+++ b/App.Backend/App.API/App.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "default": "Data Source=.;Initial Catalog=App.DB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "default": "Server=(localdb)\\MSSQLLocalDB;Database=manara;TrustServerCertificate=True;"
   }
   
 }
