Remove appsettings.Development.json from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,5 @@ Release/
 
 
 ## ASP.NET Core specific
-appsettings.Development.json
-secrets.json
+**/appsettings.Development.json
+**/secrets.json
