--- a/App.Backend/App.API/App.API/App.API.csproj
+++ b/App.Backend/App.API/App.API/App.API.csproj
@@ -71,4 +71,8 @@
     <ProjectReference Include="..\..\App.Application\App.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\Product\" />
+  </ItemGroup>
+
 </Project>
