--- a/App.Backend/App.Infrastructure/App.Infrastructure.csproj
+++ b/App.Backend/App.Infrastructure/App.Infrastructure.csproj
@@ -57,6 +57,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0">
