--- a/App.Frontend/package.json
+++ b/App.Frontend/package.json
@@ -34,6 +34,7 @@
     "@fortawesome/fontawesome-free": "^7.1.0",
     "bootstrap": "^5.3.8",
     "ngx-spinner": "^19.0.0",
+    "ngx-toastr": "^19.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
