--- a/App.Frontend/package.json
+++ b/App.Frontend/package.json
@@ -30,21 +30,25 @@
     "@angular/forms": "^21.0.0",
     "@angular/material": "^21.0.1",
     "@angular/platform-browser": "^21.0.0",
+    "@angular/platform-browser-dynamic": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@fortawesome/fontawesome-free": "^7.1.0",
-    "@ngx-translate/core": "^17.0.0",
-    "@ngx-translate/http-loader": "^17.0.0",
+    "@ngx-translate/core": "^16.0.3",
+    "@ngx-translate/http-loader": "^9.0.0",
     "bootstrap": "^5.3.8",
+    "messageformat": "^2.3.0",
     "ngx-spinner": "^19.0.0",
-    "ngx-translate-messageformat-compiler": "^7.2.0",
     "ngx-toastr": "^19.1.0",
+    "ngx-translate-messageformat-compiler": "^8.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular/build": "^21.0.0",
     "@angular/cli": "^21.0.0",
     "@angular/compiler-cli": "^21.0.0",
+    "@types/node": "^22.0.0",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
