--- a/App.Frontend/package.json
+++ b/App.Frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "app.frontend",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,49 +9,47 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "prettier": {
-    "printWidth": 100,
-    "singleQuote": true,
-    "overrides": [
-      {
-        "files": "*.html",
-        "options": {
-          "parser": "angular"
-        }
-      }
-    ]
-  },
-  "private": true,
-  "packageManager": "npm@11.6.2",
   "dependencies": {
-    "@angular/animations": "^21.0.0",
-    "@angular/common": "^21.0.0",
-    "@angular/compiler": "^21.0.0",
-    "@angular/core": "^21.0.0",
-    "@angular/forms": "^21.0.0",
-    "@angular/material": "^21.0.1",
-    "@angular/platform-browser": "^21.0.0",
-    "@angular/platform-browser-dynamic": "^21.0.0",
-    "@angular/router": "^21.0.0",
+    "@angular/animations": "21.0.0",
+    "@angular/common": "21.0.0",
+    "@angular/compiler": "21.0.0",
+    "@angular/core": "21.0.0",
+    "@angular/forms": "21.0.0",
+    "@angular/platform-browser": "21.0.0",
+    "@angular/platform-browser-dynamic": "21.0.0",
+    "@angular/router": "21.0.0",
+    "@angular/material": "21.0.0",
+
     "@fortawesome/fontawesome-free": "^7.1.0",
-    "@ngx-translate/core": "^16.0.3",
-    "@ngx-translate/http-loader": "^9.0.0",
     "bootstrap": "^5.3.8",
-    "messageformat": "^2.3.0",
+
     "ngx-spinner": "^19.0.0",
     "ngx-toastr": "^19.1.0",
-    "ngx-translate-messageformat-compiler": "^8.0.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "8.0.0",
+    "ngx-translate-messageformat-compiler": "^7.0.0",
+    "messageformat": "^2.3.0",
+
+    "rxjs": "~7.8.1",
+    "zone.js": "~0.15.0",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.0",
-    "@angular/cli": "^21.0.0",
-    "@angular/compiler-cli": "^21.0.0",
+    "@angular/cli": "21.0.0",
+    "@angular/build": "21.0.0",
+    "@angular/compiler-cli": "21.0.0",
+
+    "typescript": "~5.9.3",
+
     "@types/node": "^22.0.0",
-    "jsdom": "^27.1.0",
-    "typescript": "~5.9.2",
-    "vitest": "^4.0.8"
+    "@types/jasmine": "~5.1.0",
+    "jasmine-core": "~5.1.0",
+
+    "karma": "~6.4.3",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0"
   }
 }
