--- a/App.Backend/App.API/App.API/App.API.csproj
+++ b/App.Backend/App.API/App.API/App.API.csproj
@@ -80,4 +80,8 @@
     <ProjectReference Include="..\..\App.Infrastructure\App.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\Faculty\" />
+  </ItemGroup>
+
 </Project>
