--- a/App.Frontend/package.json
+++ b/App.Frontend/package.json
@@ -28,6 +28,7 @@
     "ngx-toastr": "^19.1.0",
     "ngx-translate-messageformat-compiler": "^7.0.0",
     "rxjs": "~7.8.1",
+    "sweetalert2": "^11.26.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
